# TANAOROSHI-API-v2

./: .dockerignore  .editorconfig  .gitignore  DEVELOPMENT_GUIDE.md  Dockerfile  README.md  RUN_GUIDE.md  config.dev.yaml  config.local.yaml  config.prod.yaml  config.staging.yaml  config.yaml  inventory_terms_glossary.txt  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  exceptions.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  custom_master.py  inventory.py  user.py
app/constants/: __init__.py  error_codes.py
app/models/: __init__.py  custom_master.py  koujyou_master.py  user.py
app/repositories/: __init__.py  custom_master_repository.py  inventory_repository.py  user_repository.py
app/schemas/: __init__.py  custom_master.py  koujyou_master.py  response.py  user.py
app/services/: __init__.py  custom_master_service.py  inventory_service.py  user_service.py
app/utils/: logger.py
tests/: __init__.py  conftest.py
tests/inventory/: __init__.py  test_record_create.py  test_record_list.py  test_record_update.py
tests/inventory/record_create/: __init__.py  test_create_record_minimal_fields.py  test_create_record_success.py  test_create_record_with_all_fields.py
tests/user/: __init__.py  test_user_batch_create.py  test_user_batch_delete.py  test_user_batch_update.py  test_user_create.py  test_user_list.py  test_user_update.py
